--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     
     <div id="brushes">
         <h2>Brushes</h2>
+        <img src="images/hacksaw.webp" alt="brushes">
         <h3>Hacksaw Brushes</h3>
         <p>
             Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes.
@@ -24,6 +25,7 @@
 
     <div id="frames">
         <h2>Frames</h2>
+        <img src="images/frames.webp" alt="frames">
         <h3>Art Frames (assorted)</h3>
         <p>
             Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs.
@@ -33,6 +35,7 @@
 
     <div id="paint">
         <h2>Paint</h2>
+        <img src="images/finnish.jpeg" alt="frames">
         <h3>Clean Finnish Paint</h3>
         <p>
             Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.
